src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    NEGACION
    COMENTARIO

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> algoritmo
Rule 2     codigo -> algoritmo codigo
Rule 3     algoritmo -> imprimir
Rule 4     algoritmo -> asignacion
Rule 5     algoritmo -> expresion END
Rule 6     algoritmo -> comparacion END
Rule 7     algoritmo -> sentenciaIf
Rule 8     algoritmo -> sentenciaFOR
Rule 9     algoritmo -> sentenciaWhile
Rule 10    algoritmo -> input
Rule 11    algoritmo -> funciones
Rule 12    algoritmo -> expresionSinRetorno
Rule 13    funciones -> tipo VARIABLE PIZQ parametros PDER LIZQ codigo RETURN expresion END LDER
Rule 14    funciones -> VOID VARIABLE PIZQ parametros PDER LIZQ codigo LDER
Rule 15    asignacion -> tipo VARIABLE IGUAL expresiones END
Rule 16    asignacion -> VARIABLE IGUAL expresiones END
Rule 17    expresionSinRetorno -> funcionStructura END
Rule 18    expresionSinRetorno -> funcionStructura
Rule 19    funcionStructura -> first
Rule 20    funcionStructura -> last
Rule 21    funcionStructura -> length
Rule 22    funcionStructura -> remove
Rule 23    funcionStructura -> add
Rule 24    parametros -> empty
Rule 25    parametros -> tipo VARIABLE
Rule 26    parametros -> tipo VARIABLE COMA parametros
Rule 27    string -> STRING
Rule 28    expresiones -> expresion
Rule 29    expresiones -> comparacion
Rule 30    expresiones -> BOOLEAN
Rule 31    expresiones -> opstring
Rule 32    expresiones -> indexacion
Rule 33    expresiones -> lista
Rule 34    expresiones -> conjuntos
Rule 35    expresiones -> first
Rule 36    expresiones -> last
Rule 37    expresiones -> length
Rule 38    expresiones -> remove
Rule 39    expresiones -> add
Rule 40    expresiones -> slice
Rule 41    expresiones -> opLogicas
Rule 42    opstring -> string
Rule 43    opstring -> VARIABLE
Rule 44    opstring -> string MAS opstring
Rule 45    opstring -> VARIABLE MAS opstring
Rule 46    imprimir -> PRINT PIZQ opstring PDER END
Rule 47    input -> tipo VARIABLE IGUAL INPUT PIZQ PDER END
Rule 48    expresion -> valor
Rule 49    lista -> CIZQ elementos CDER
Rule 50    first -> VARIABLE POINT FIRST PIZQ PDER
Rule 51    last -> VARIABLE POINT LAST PIZQ PDER
Rule 52    length -> VARIABLE POINT LEN PIZQ PDER
Rule 53    add -> VARIABLE POINT ADD PIZQ valor PDER
Rule 54    slice -> VARIABLE POINT SLICE PIZQ valor COMA valor PDER
Rule 55    remove -> VARIABLE POINT REMOVE PIZQ valor PDER
Rule 56    conjuntos -> LIZQ elementos LDER
Rule 57    elementos -> valor
Rule 58    elementos -> valor COMA elementos
Rule 59    opLogicas -> terminoLogico
Rule 60    opLogicas -> terminoLogico operadorLog terminoLogico
Rule 61    opLogicas -> terminoLogico operadorLog terminoLogico operadorLog opLogicas
Rule 62    terminoLogico -> VARIABLE
Rule 63    terminoLogico -> BOOLEAN
Rule 64    terminoLogico -> PIZQ comparacion PDER
Rule 65    expresion -> valor operadorMat expresion
Rule 66    comparacion -> expresion operadorComp expresion
Rule 67    operadorLog -> AND
Rule 68    operadorLog -> OR
Rule 69    operadorMat -> MAS
Rule 70    operadorMat -> RESTA
Rule 71    operadorMat -> PROD
Rule 72    operadorMat -> DIV
Rule 73    operadorMat -> MOD
Rule 74    operadorComp -> MAYOR
Rule 75    operadorComp -> MENOR
Rule 76    operadorComp -> MAYORIG
Rule 77    operadorComp -> MENORIG
Rule 78    operadorComp -> DIGUAL
Rule 79    operadorComp -> DIF
Rule 80    tipo -> VAR
Rule 81    tipo -> INT
Rule 82    tipo -> BOOL
Rule 83    tipo -> DOUBLE
Rule 84    tipo -> VOID
Rule 85    tipo -> STR
Rule 86    valor -> ENTERO
Rule 87    valor -> VARIABLE
Rule 88    sentenciaIf -> IF PIZQ comparacion PDER LIZQ algoritmo LDER varianteIf
Rule 89    sentenciaIf -> IF PIZQ opLogicas PDER LIZQ algoritmo LDER varianteIf
Rule 90    varianteIf -> ELSEIF PIZQ comparacion PDER LIZQ algoritmo LDER
Rule 91    varianteIf -> ELSEIF PIZQ opLogicas PDER LIZQ algoritmo LDER
Rule 92    varianteIf -> ELSE LIZQ algoritmo LDER
Rule 93    varianteIf -> ELSEIF PIZQ comparacion PDER LIZQ algoritmo LDER varianteIf
Rule 94    varianteIf -> ELSEIF PIZQ opLogicas PDER LIZQ algoritmo LDER varianteIf
Rule 95    varianteIf -> empty
Rule 96    sentenciaFOR -> FOR PIZQ parametrosF PDER LIZQ algoritmo LDER
Rule 97    parametrosF -> inicializacionFor END comparacion END VARIABLE increDecre
Rule 98    parametrosF -> inicializacionFor END opLogicas END VARIABLE increDecre
Rule 99    parametrosF -> VARIABLE IN VARIABLE
Rule 100   inicializacionFor -> VARIABLE IGUAL ENTERO
Rule 101   inicializacionFor -> INT VARIABLE IGUAL ENTERO
Rule 102   inicializacionFor -> VAR VARIABLE IGUAL ENTERO
Rule 103   increDecre -> INCREMENTO
Rule 104   increDecre -> DECREMENTO
Rule 105   sentenciaWhile -> WHILE PIZQ comparacion PDER LIZQ algoritmo LDER
Rule 106   sentenciaWhile -> WHILE PIZQ opLogicas PDER LIZQ algoritmo LDER
Rule 107   sentenciaWhile -> DO LIZQ algoritmo LDER WHILE PIZQ comparacion PDER END
Rule 108   sentenciaWhile -> DO LIZQ algoritmo LDER WHILE PIZQ opLogicas PDER END
Rule 109   indexacion -> VARIABLE CIZQ valor CDER
Rule 110   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 53
AND                  : 67
BOOL                 : 82
BOOLEAN              : 30 63
CDER                 : 49 109
CIZQ                 : 49 109
COMA                 : 26 54 58
COMENTARIO           : 
DECREMENTO           : 104
DIF                  : 79
DIGUAL               : 78
DIV                  : 72
DO                   : 107 108
DOUBLE               : 83
ELSE                 : 92
ELSEIF               : 90 91 93 94
END                  : 5 6 13 15 16 17 46 47 97 97 98 98 107 108
ENTERO               : 86 100 101 102
FIRST                : 50
FOR                  : 96
IF                   : 88 89
IGUAL                : 15 16 47 100 101 102
IN                   : 99
INCREMENTO           : 103
INPUT                : 47
INT                  : 81 101
LAST                 : 51
LDER                 : 13 14 56 88 89 90 91 92 93 94 96 105 106 107 108
LEN                  : 52
LIZQ                 : 13 14 56 88 89 90 91 92 93 94 96 105 106 107 108
MAS                  : 44 45 69
MAYOR                : 74
MAYORIG              : 76
MENOR                : 75
MENORIG              : 77
MOD                  : 73
NEGACION             : 
OR                   : 68
PDER                 : 13 14 46 47 50 51 52 53 54 55 64 88 89 90 91 93 94 96 105 106 107 108
PIZQ                 : 13 14 46 47 50 51 52 53 54 55 64 88 89 90 91 93 94 96 105 106 107 108
POINT                : 50 51 52 53 54 55
PRINT                : 46
PROD                 : 71
REMOVE               : 55
RESTA                : 70
RETURN               : 13
SLICE                : 54
STR                  : 85
STRING               : 27
VAR                  : 80 102
VARIABLE             : 13 14 15 16 25 26 43 45 47 50 51 52 53 54 55 62 87 97 98 99 99 100 101 102 109
VOID                 : 14 84
WHILE                : 105 106 107 108
error                : 

Nonterminals, with rules where they appear

add                  : 23 39
algoritmo            : 1 2 88 89 90 91 92 93 94 96 105 106 107 108
asignacion           : 4
codigo               : 2 13 14 0
comparacion          : 6 29 64 88 90 93 97 105 107
conjuntos            : 34
elementos            : 49 56 58
empty                : 24 95
expresion            : 5 13 28 65 66 66
expresionSinRetorno  : 12
expresiones          : 15 16
first                : 19 35
funcionStructura     : 17 18
funciones            : 11
imprimir             : 3
increDecre           : 97 98
indexacion           : 32
inicializacionFor    : 97 98
input                : 10
last                 : 20 36
length               : 21 37
lista                : 33
opLogicas            : 41 61 89 91 94 98 106 108
operadorComp         : 66
operadorLog          : 60 61 61
operadorMat          : 65
opstring             : 31 44 45 46
parametros           : 13 14 26
parametrosF          : 96
remove               : 22 38
sentenciaFOR         : 8
sentenciaIf          : 7
sentenciaWhile       : 9
slice                : 40
string               : 42 44
terminoLogico        : 59 60 60 61 61
tipo                 : 13 15 25 26 47
valor                : 48 53 54 54 55 57 58 65 109
varianteIf           : 88 89 93 94

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . imprimir
    (4) algoritmo -> . asignacion
    (5) algoritmo -> . expresion END
    (6) algoritmo -> . comparacion END
    (7) algoritmo -> . sentenciaIf
    (8) algoritmo -> . sentenciaFOR
    (9) algoritmo -> . sentenciaWhile
    (10) algoritmo -> . input
    (11) algoritmo -> . funciones
    (12) algoritmo -> . expresionSinRetorno
    (46) imprimir -> . PRINT PIZQ opstring PDER END
    (15) asignacion -> . tipo VARIABLE IGUAL expresiones END
    (16) asignacion -> . VARIABLE IGUAL expresiones END
    (48) expresion -> . valor
    (65) expresion -> . valor operadorMat expresion
    (66) comparacion -> . expresion operadorComp expresion
    (88) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ algoritmo LDER varianteIf
    (89) sentenciaIf -> . IF PIZQ opLogicas PDER LIZQ algoritmo LDER varianteIf
    (96) sentenciaFOR -> . FOR PIZQ parametrosF PDER LIZQ algoritmo LDER
    (105) sentenciaWhile -> . WHILE PIZQ comparacion PDER LIZQ algoritmo LDER
    (106) sentenciaWhile -> . WHILE PIZQ opLogicas PDER LIZQ algoritmo LDER
    (107) sentenciaWhile -> . DO LIZQ algoritmo LDER WHILE PIZQ comparacion PDER END
    (108) sentenciaWhile -> . DO LIZQ algoritmo LDER WHILE PIZQ opLogicas PDER END
    (47) input -> . tipo VARIABLE IGUAL INPUT PIZQ PDER END
    (13) funciones -> . tipo VARIABLE PIZQ parametros PDER LIZQ codigo RETURN expresion END LDER
    (14) funciones -> . VOID VARIABLE PIZQ parametros PDER LIZQ codigo LDER
    (17) expresionSinRetorno -> . funcionStructura END
    (18) expresionSinRetorno -> . funcionStructura
    (80) tipo -> . VAR
    (81) tipo -> . INT
    (82) tipo -> . BOOL
    (83) tipo -> . DOUBLE
    (84) tipo -> . VOID
    (85) tipo -> . STR
    (86) valor -> . ENTERO
    (87) valor -> . VARIABLE
    (19) funcionStructura -> . first
    (20) funcionStructura -> . last
    (21) funcionStructura -> . length
    (22) funcionStructura -> . remove
    (23) funcionStructura -> . add
    (50) first -> . VARIABLE POINT FIRST PIZQ PDER
    (51) last -> . VARIABLE POINT LAST PIZQ PDER
    (52) length -> . VARIABLE POINT LEN PIZQ PDER
    (55) remove -> . VARIABLE POINT REMOVE PIZQ valor PDER
    (53) add -> . VARIABLE POINT ADD PIZQ valor PDER

    PRINT           shift and go to state 13
    VARIABLE        shift and go to state 15
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    VOID            shift and go to state 21
    VAR             shift and go to state 23
    INT             shift and go to state 24
    BOOL            shift and go to state 25
    DOUBLE          shift and go to state 26
    STR             shift and go to state 27
    ENTERO          shift and go to state 28

    codigo                         shift and go to state 1
    algoritmo                      shift and go to state 2
    imprimir                       shift and go to state 3
    asignacion                     shift and go to state 4
    expresion                      shift and go to state 5
    comparacion                    shift and go to state 6
    sentenciaIf                    shift and go to state 7
    sentenciaFOR                   shift and go to state 8
    sentenciaWhile                 shift and go to state 9
    input                          shift and go to state 10
    funciones                      shift and go to state 11
    expresionSinRetorno            shift and go to state 12
    tipo                           shift and go to state 14
    valor                          shift and go to state 16
    funcionStructura               shift and go to state 22
    first                          shift and go to state 29
    last                           shift and go to state 30
    length                         shift and go to state 31
    remove                         shift and go to state 32
    add                            shift and go to state 33

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> algoritmo .
    (2) codigo -> algoritmo . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . imprimir
    (4) algoritmo -> . asignacion
    (5) algoritmo -> . expresion END
    (6) algoritmo -> . comparacion END
    (7) algoritmo -> . sentenciaIf
    (8) algoritmo -> . sentenciaFOR
    (9) algoritmo -> . sentenciaWhile
    (10) algoritmo -> . input
    (11) algoritmo -> . funciones
    (12) algoritmo -> . expresionSinRetorno
    (46) imprimir -> . PRINT PIZQ opstring PDER END
    (15) asignacion -> . tipo VARIABLE IGUAL expresiones END
    (16) asignacion -> . VARIABLE IGUAL expresiones END
    (48) expresion -> . valor
    (65) expresion -> . valor operadorMat expresion
    (66) comparacion -> . expresion operadorComp expresion
    (88) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ algoritmo LDER varianteIf
    (89) sentenciaIf -> . IF PIZQ opLogicas PDER LIZQ algoritmo LDER varianteIf
    (96) sentenciaFOR -> . FOR PIZQ parametrosF PDER LIZQ algoritmo LDER
    (105) sentenciaWhile -> . WHILE PIZQ comparacion PDER LIZQ algoritmo LDER
    (106) sentenciaWhile -> . WHILE PIZQ opLogicas PDER LIZQ algoritmo LDER
    (107) sentenciaWhile -> . DO LIZQ algoritmo LDER WHILE PIZQ comparacion PDER END
    (108) sentenciaWhile -> . DO LIZQ algoritmo LDER WHILE PIZQ opLogicas PDER END
    (47) input -> . tipo VARIABLE IGUAL INPUT PIZQ PDER END
    (13) funciones -> . tipo VARIABLE PIZQ parametros PDER LIZQ codigo RETURN expresion END LDER
    (14) funciones -> . VOID VARIABLE PIZQ parametros PDER LIZQ codigo LDER
    (17) expresionSinRetorno -> . funcionStructura END
    (18) expresionSinRetorno -> . funcionStructura
    (80) tipo -> . VAR
    (81) tipo -> . INT
    (82) tipo -> . BOOL
    (83) tipo -> . DOUBLE
    (84) tipo -> . VOID
    (85) tipo -> . STR
    (86) valor -> . ENTERO
    (87) valor -> . VARIABLE
    (19) funcionStructura -> . first
    (20) funcionStructura -> . last
    (21) funcionStructura -> . length
    (22) funcionStructura -> . remove
    (23) funcionStructura -> . add
    (50) first -> . VARIABLE POINT FIRST PIZQ PDER
    (51) last -> . VARIABLE POINT LAST PIZQ PDER
    (52) length -> . VARIABLE POINT LEN PIZQ PDER
    (55) remove -> . VARIABLE POINT REMOVE PIZQ valor PDER
    (53) add -> . VARIABLE POINT ADD PIZQ valor PDER

    $end            reduce using rule 1 (codigo -> algoritmo .)
    RETURN          reduce using rule 1 (codigo -> algoritmo .)
    LDER            reduce using rule 1 (codigo -> algoritmo .)
    PRINT           shift and go to state 13
    VARIABLE        shift and go to state 15
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 19
    DO              shift and go to state 20
    VOID            shift and go to state 21
    VAR             shift and go to state 23
    INT             shift and go to state 24
    BOOL            shift and go to state 25
    DOUBLE          shift and go to state 26
    STR             shift and go to state 27
    ENTERO          shift and go to state 28

    algoritmo                      shift and go to state 2
    codigo                         shift and go to state 34
    imprimir                       shift and go to state 3
    asignacion                     shift and go to state 4
    expresion                      shift and go to state 5
    comparacion                    shift and go to state 6
    sentenciaIf                    shift and go to state 7
    sentenciaFOR                   shift and go to state 8
    sentenciaWhile                 shift and go to state 9
    input                          shift and go to state 10
    funciones                      shift and go to state 11
    expresionSinRetorno            shift and go to state 12
    tipo                           shift and go to state 14
    valor                          shift and go to state 16
    funcionStructura               shift and go to state 22
    first                          shift and go to state 29
    last                           shift and go to state 30
    length                         shift and go to state 31
    remove                         shift and go to state 32
    add                            shift and go to state 33

state 3

    (3) algoritmo -> imprimir .

    PRINT           reduce using rule 3 (algoritmo -> imprimir .)
    VARIABLE        reduce using rule 3 (algoritmo -> imprimir .)
    IF              reduce using rule 3 (algoritmo -> imprimir .)
    FOR             reduce using rule 3 (algoritmo -> imprimir .)
    WHILE           reduce using rule 3 (algoritmo -> imprimir .)
    DO              reduce using rule 3 (algoritmo -> imprimir .)
    VOID            reduce using rule 3 (algoritmo -> imprimir .)
    VAR             reduce using rule 3 (algoritmo -> imprimir .)
    INT             reduce using rule 3 (algoritmo -> imprimir .)
    BOOL            reduce using rule 3 (algoritmo -> imprimir .)
    DOUBLE          reduce using rule 3 (algoritmo -> imprimir .)
    STR             reduce using rule 3 (algoritmo -> imprimir .)
    ENTERO          reduce using rule 3 (algoritmo -> imprimir .)
    $end            reduce using rule 3 (algoritmo -> imprimir .)
    RETURN          reduce using rule 3 (algoritmo -> imprimir .)
    LDER            reduce using rule 3 (algoritmo -> imprimir .)


state 4

    (4) algoritmo -> asignacion .

    PRINT           reduce using rule 4 (algoritmo -> asignacion .)
    VARIABLE        reduce using rule 4 (algoritmo -> asignacion .)
    IF              reduce using rule 4 (algoritmo -> asignacion .)
    FOR             reduce using rule 4 (algoritmo -> asignacion .)
    WHILE           reduce using rule 4 (algoritmo -> asignacion .)
    DO              reduce using rule 4 (algoritmo -> asignacion .)
    VOID            reduce using rule 4 (algoritmo -> asignacion .)
    VAR             reduce using rule 4 (algoritmo -> asignacion .)
    INT             reduce using rule 4 (algoritmo -> asignacion .)
    BOOL            reduce using rule 4 (algoritmo -> asignacion .)
    DOUBLE          reduce using rule 4 (algoritmo -> asignacion .)
    STR             reduce using rule 4 (algoritmo -> asignacion .)
    ENTERO          reduce using rule 4 (algoritmo -> asignacion .)
    $end            reduce using rule 4 (algoritmo -> asignacion .)
    RETURN          reduce using rule 4 (algoritmo -> asignacion .)
    LDER            reduce using rule 4 (algoritmo -> asignacion .)


state 5

    (5) algoritmo -> expresion . END
    (66) comparacion -> expresion . operadorComp expresion
    (74) operadorComp -> . MAYOR
    (75) operadorComp -> . MENOR
    (76) operadorComp -> . MAYORIG
    (77) operadorComp -> . MENORIG
    (78) operadorComp -> . DIGUAL
    (79) operadorComp -> . DIF

    END             shift and go to state 35
    MAYOR           shift and go to state 37
    MENOR           shift and go to state 38
    MAYORIG         shift and go to state 39
    MENORIG         shift and go to state 40
    DIGUAL          shift and go to state 41
    DIF             shift and go to state 42

    operadorComp                   shift and go to state 36

state 6

    (6) algoritmo -> comparacion . END

    END             shift and go to state 43


state 7

    (7) algoritmo -> sentenciaIf .

    PRINT           reduce using rule 7 (algoritmo -> sentenciaIf .)
    VARIABLE        reduce using rule 7 (algoritmo -> sentenciaIf .)
    IF              reduce using rule 7 (algoritmo -> sentenciaIf .)
    FOR             reduce using rule 7 (algoritmo -> sentenciaIf .)
    WHILE           reduce using rule 7 (algoritmo -> sentenciaIf .)
    DO              reduce using rule 7 (algoritmo -> sentenciaIf .)
    VOID            reduce using rule 7 (algoritmo -> sentenciaIf .)
    VAR             reduce using rule 7 (algoritmo -> sentenciaIf .)
    INT             reduce using rule 7 (algoritmo -> sentenciaIf .)
    BOOL            reduce using rule 7 (algoritmo -> sentenciaIf .)
    DOUBLE          reduce using rule 7 (algoritmo -> sentenciaIf .)
    STR             reduce using rule 7 (algoritmo -> sentenciaIf .)
    ENTERO          reduce using rule 7 (algoritmo -> sentenciaIf .)
    $end            reduce using rule 7 (algoritmo -> sentenciaIf .)
    RETURN          reduce using rule 7 (algoritmo -> sentenciaIf .)
    LDER            reduce using rule 7 (algoritmo -> sentenciaIf .)


state 8

    (8) algoritmo -> sentenciaFOR .

    PRINT           reduce using rule 8 (algoritmo -> sentenciaFOR .)
    VARIABLE        reduce using rule 8 (algoritmo -> sentenciaFOR .)
    IF              reduce using rule 8 (algoritmo -> sentenciaFOR .)
    FOR             reduce using rule 8 (algoritmo -> sentenciaFOR .)
    WHILE           reduce using rule 8 (algoritmo -> sentenciaFOR .)
    DO              reduce using rule 8 (algoritmo -> sentenciaFOR .)
    VOID            reduce using rule 8 (algoritmo -> sentenciaFOR .)
    VAR             reduce using rule 8 (algoritmo -> sentenciaFOR .)
    INT             reduce using rule 8 (algoritmo -> sentenciaFOR .)
    BOOL            reduce using rule 8 (algoritmo -> sentenciaFOR .)
    DOUBLE          reduce using rule 8 (algoritmo -> sentenciaFOR .)
    STR             reduce using rule 8 (algoritmo -> sentenciaFOR .)
    ENTERO          reduce using rule 8 (algoritmo -> sentenciaFOR .)
    $end            reduce using rule 8 (algoritmo -> sentenciaFOR .)
    RETURN          reduce using rule 8 (algoritmo -> sentenciaFOR .)
    LDER            reduce using rule 8 (algoritmo -> sentenciaFOR .)


state 9

    (9) algoritmo -> sentenciaWhile .

    PRINT           reduce using rule 9 (algoritmo -> sentenciaWhile .)
    VARIABLE        reduce using rule 9 (algoritmo -> sentenciaWhile .)
    IF              reduce using rule 9 (algoritmo -> sentenciaWhile .)
    FOR             reduce using rule 9 (algoritmo -> sentenciaWhile .)
    WHILE           reduce using rule 9 (algoritmo -> sentenciaWhile .)
    DO              reduce using rule 9 (algoritmo -> sentenciaWhile .)
    VOID            reduce using rule 9 (algoritmo -> sentenciaWhile .)
    VAR             reduce using rule 9 (algoritmo -> sentenciaWhile .)
    INT             reduce using rule 9 (algoritmo -> sentenciaWhile .)
    BOOL            reduce using rule 9 (algoritmo -> sentenciaWhile .)
    DOUBLE          reduce using rule 9 (algoritmo -> sentenciaWhile .)
    STR             reduce using rule 9 (algoritmo -> sentenciaWhile .)
    ENTERO          reduce using rule 9 (algoritmo -> sentenciaWhile .)
    $end            reduce using rule 9 (algoritmo -> sentenciaWhile .)
    RETURN          reduce using rule 9 (algoritmo -> sentenciaWhile .)
    LDER            reduce using rule 9 (algoritmo -> sentenciaWhile .)


state 10

    (10) algoritmo -> input .

    PRINT           reduce using rule 10 (algoritmo -> input .)
    VARIABLE        reduce using rule 10 (algoritmo -> input .)
    IF              reduce using rule 10 (algoritmo -> input .)
    FOR             reduce using rule 10 (algoritmo -> input .)
    WHILE           reduce using rule 10 (algoritmo -> input .)
    DO              reduce using rule 10 (algoritmo -> input .)
    VOID            reduce using rule 10 (algoritmo -> input .)
    VAR             reduce using rule 10 (algoritmo -> input .)
    INT             reduce using rule 10 (algoritmo -> input .)
    BOOL            reduce using rule 10 (algoritmo -> input .)
    DOUBLE          reduce using rule 10 (algoritmo -> input .)
    STR             reduce using rule 10 (algoritmo -> input .)
    ENTERO          reduce using rule 10 (algoritmo -> input .)
    $end            reduce using rule 10 (algoritmo -> input .)
    RETURN          reduce using rule 10 (algoritmo -> input .)
    LDER            reduce using rule 10 (algoritmo -> input .)


state 11

    (11) algoritmo -> funciones .

    PRINT           reduce using rule 11 (algoritmo -> funciones .)
    VARIABLE        reduce using rule 11 (algoritmo -> funciones .)
    IF              reduce using rule 11 (algoritmo -> funciones .)
    FOR             reduce using rule 11 (algoritmo -> funciones .)
    WHILE           reduce using rule 11 (algoritmo -> funciones .)
    DO              reduce using rule 11 (algoritmo -> funciones .)
    VOID            reduce using rule 11 (algoritmo -> funciones .)
    VAR             reduce using rule 11 (algoritmo -> funciones .)
    INT             reduce using rule 11 (algoritmo -> funciones .)
    BOOL            reduce using rule 11 (algoritmo -> funciones .)
    DOUBLE          reduce using rule 11 (algoritmo -> funciones .)
    STR             reduce using rule 11 (algoritmo -> funciones .)
    ENTERO          reduce using rule 11 (algoritmo -> funciones .)
    $end            reduce using rule 11 (algoritmo -> funciones .)
    RETURN          reduce using rule 11 (algoritmo -> funciones .)
    LDER            reduce using rule 11 (algoritmo -> funciones .)


state 12

    (12) algoritmo -> expresionSinRetorno .

    PRINT           reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    VARIABLE        reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    IF              reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    FOR             reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    WHILE           reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    DO              reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    VOID            reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    VAR             reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    INT             reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    BOOL            reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    DOUBLE          reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    STR             reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    ENTERO          reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    $end            reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    RETURN          reduce using rule 12 (algoritmo -> expresionSinRetorno .)
    LDER            reduce using rule 12 (algoritmo -> expresionSinRetorno .)


state 13

    (46) imprimir -> PRINT . PIZQ opstring PDER END

    PIZQ            shift and go to state 44


state 14

    (15) asignacion -> tipo . VARIABLE IGUAL expresiones END
    (47) input -> tipo . VARIABLE IGUAL INPUT PIZQ PDER END
    (13) funciones -> tipo . VARIABLE PIZQ parametros PDER LIZQ codigo RETURN expresion END LDER

    VARIABLE        shift and go to state 45


state 15

    (16) asignacion -> VARIABLE . IGUAL expresiones END
    (87) valor -> VARIABLE .
    (50) first -> VARIABLE . POINT FIRST PIZQ PDER
    (51) last -> VARIABLE . POINT LAST PIZQ PDER
    (52) length -> VARIABLE . POINT LEN PIZQ PDER
    (55) remove -> VARIABLE . POINT REMOVE PIZQ valor PDER
    (53) add -> VARIABLE . POINT ADD PIZQ valor PDER

    IGUAL           shift and go to state 46
    MAS             reduce using rule 87 (valor -> VARIABLE .)
    RESTA           reduce using rule 87 (valor -> VARIABLE .)
    PROD            reduce using rule 87 (valor -> VARIABLE .)
    DIV             reduce using rule 87 (valor -> VARIABLE .)
    MOD             reduce using rule 87 (valor -> VARIABLE .)
    END             reduce using rule 87 (valor -> VARIABLE .)
    MAYOR           reduce using rule 87 (valor -> VARIABLE .)
    MENOR           reduce using rule 87 (valor -> VARIABLE .)
    MAYORIG         reduce using rule 87 (valor -> VARIABLE .)
    MENORIG         reduce using rule 87 (valor -> VARIABLE .)
    DIGUAL          reduce using rule 87 (valor -> VARIABLE .)
    DIF             reduce using rule 87 (valor -> VARIABLE .)
    POINT           shift and go to state 47


state 16

    (48) expresion -> valor .
    (65) expresion -> valor . operadorMat expresion
    (69) operadorMat -> . MAS
    (70) operadorMat -> . RESTA
    (71) operadorMat -> . PROD
    (72) operadorMat -> . DIV
    (73) operadorMat -> . MOD

    END             reduce using rule 48 (expresion -> valor .)
    MAYOR           reduce using rule 48 (expresion -> valor .)
    MENOR           reduce using rule 48 (expresion -> valor .)
    MAYORIG         reduce using rule 48 (expresion -> valor .)
    MENORIG         reduce using rule 48 (expresion -> valor .)
    DIGUAL          reduce using rule 48 (expresion -> valor .)
    DIF             reduce using rule 48 (expresion -> valor .)
    PDER            reduce using rule 48 (expresion -> valor .)
    MAS             shift and go to state 49
    RESTA           shift and go to state 50
    PROD            shift and go to state 51
    DIV             shift and go to state 52
    MOD             shift and go to state 53

    operadorMat                    shift and go to state 48

state 17

    (88) sentenciaIf -> IF . PIZQ comparacion PDER LIZQ algoritmo LDER varianteIf
    (89) sentenciaIf -> IF . PIZQ opLogicas PDER LIZQ algoritmo LDER varianteIf

    PIZQ            shift and go to state 54


state 18

    (96) sentenciaFOR -> FOR . PIZQ parametrosF PDER LIZQ algoritmo LDER

    PIZQ            shift and go to state 55


state 19

    (105) sentenciaWhile -> WHILE . PIZQ comparacion PDER LIZQ algoritmo LDER
    (106) sentenciaWhile -> WHILE . PIZQ opLogicas PDER LIZQ algoritmo LDER

    PIZQ            shift and go to state 56


state 20

    (107) sentenciaWhile -> DO . LIZQ algoritmo LDER WHILE PIZQ comparacion PDER END
    (108) sentenciaWhile -> DO . LIZQ algoritmo LDER WHILE PIZQ opLogicas PDER END

    LIZQ            shift and go to state 57


state 21

    (14) funciones -> VOID . VARIABLE PIZQ parametros PDER LIZQ codigo LDER
    (84) tipo -> VOID .

  ! shift/reduce conflict for VARIABLE resolved as shift
    VARIABLE        shift and go to state 58

  ! VARIABLE        [ reduce using rule 84 (tipo -> VOID .) ]


state 22

    (17) expresionSinRetorno -> funcionStructura . END
    (18) expresionSinRetorno -> funcionStructura .

    END             shift and go to state 59
    PRINT           reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    VARIABLE        reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    IF              reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    FOR             reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    WHILE           reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    DO              reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    VOID            reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    VAR             reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    INT             reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    BOOL            reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    DOUBLE          reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    STR             reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    ENTERO          reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    $end            reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    RETURN          reduce using rule 18 (expresionSinRetorno -> funcionStructura .)
    LDER            reduce using rule 18 (expresionSinRetorno -> funcionStructura .)


state 23

    (80) tipo -> VAR .

    VARIABLE        reduce using rule 80 (tipo -> VAR .)


state 24

    (81) tipo -> INT .

    VARIABLE        reduce using rule 81 (tipo -> INT .)


state 25

    (82) tipo -> BOOL .

    VARIABLE        reduce using rule 82 (tipo -> BOOL .)


state 26

    (83) tipo -> DOUBLE .

    VARIABLE        reduce using rule 83 (tipo -> DOUBLE .)


state 27

    (85) tipo -> STR .

    VARIABLE        reduce using rule 85 (tipo -> STR .)

